--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -4,9 +4,9 @@
   <meta name="viewport" content="width=device-width">
   <title>Brunch</title>
   <link rel="stylesheet" href="/app.css">
-  <script src="/vendor.js"></script>
-  <script src="/curvature.js"></script>
-  <script src="/app.js"></script>
+  <script src="/vendor.js?_={{ Date.now(); }}"></script>
+  <script src="/curvature.js?_={{ Date.now(); }}"></script>
+  <script src="/app.js?_={{ Date.now(); }}"></script>
   <script>require('initialize');</script>
 </head>
 <body>
