--- a/app/form.html
+++ b/app/form.html
@@ -33,7 +33,7 @@
 			<option value = "text/csv">text/csv</option>
 			<option value = "text/tsv">text/tsv</option>
 			<option value = "text/json">text/json</option>
-			<option value = "text/yaml">text/yaml</option>
+			<!-- <option value = "text/yaml">text/yaml</option> -->
 		</select>
 
 		<button cv-on = "click:submitRequest(event)"> → </button>
@@ -43,7 +43,7 @@
 			<option value = "text/csv">text/csv</option>
 			<option value = "text/tsv">text/tsv</option>
 			<option value = "text/json">text/json</option>
-			<option value = "text/yaml">text/yaml</option>
+			<!-- <option value = "text/yaml">text/yaml</option> -->
 		</select>
 
 	</div>
