Adding routing to frontend and backend.

--- a/app/form.html
+++ b/app/form.html
@@ -1,4 +1,4 @@
-<h1>Content-Type changer.</h1>
+<h1>Content-Type changer</h1>
 
 <!-- <div class = "url-bar row">
 	<label class = "bordered column">
