--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -2,7 +2,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Brunch</title>
+  <title>warehouse</title>
   <link rel="stylesheet" href="/app.css">
   <script src="/vendor.js?_={{ Date.now(); }}"></script>
   <script src="/curvature.js?_={{ Date.now(); }}"></script>
