--- a/app/streams.html
+++ b/app/streams.html
@@ -1,1 +1,44 @@
-<button cv-on = "click:publishMessage(event)">pub</button>
+<h1>[[streamName]]</h1>
+
+<label class = "bordered column">
+	input
+	<textarea cv-bind = "input" class = "input"></textarea>
+</label>
+
+<div class = "mid-bar">
+
+	<div class = "left-bar">
+
+		<label cv-if = "inputCanHaveHeaders">
+			input has headers
+			<input type = "checkbox" cv-bind = "inputHeaders" value = "1" />
+		</label>
+
+	</div>
+
+	<div class = "center-bar">
+
+		<select cv-bind = "inputType">
+			<option value = "text/plain">text/plain</option>
+			<option value = "text/csv">text/csv</option>
+			<option value = "text/tsv">text/tsv</option>
+			<option value = "text/json">text/json</option>
+			<!-- <option value = "text/yaml">text/yaml</option> -->
+		</select>
+
+		<button cv-on = "click:publishMessage(event)"> publishMessage → </button>
+	</div>
+
+</div>
+
+<label class = "bordered column">
+
+	<ul class = "event-log" cv-each = "eventLog:event:i">
+		<li cv-with = "event" cv-carry = "i">
+			id: [[id]] user: [[data.user]] payload: [[data.payload|toJson]]
+		</li>
+	</ul>
+
+	<div class = "bottom">output</div>
+
+</label>
