Create scaffold table

--- a/app/form.html
+++ b/app/form.html
@@ -1,5 +1,7 @@
 <h1>Content-Type changer</h1>
 
+<p><a cv-link = "/">home</a></p>
+
 <!-- <div class = "url-bar row">
 	<label class = "bordered column">
 		endpoint
