--- a/app/home.html
+++ b/app/home.html
@@ -2,9 +2,7 @@
 
 <ul cv-each = "links:link:title">
 	<li>
-		<a href = "[[link]]">
-			[[title]]
-		</a>
+		<a cv-link = "[[link]]">[[title]]</a>
 	</li>
 </ul>
 
