--- a/app/streams.html
+++ b/app/streams.html
@@ -1,5 +1,7 @@
 <h1>[[streamName]]</h1>
 
+<p><a cv-link = "/streams">back</a></p>
+
 <label class = "bordered column">
 	input
 	<textarea cv-bind = "input" class = "input"></textarea>
@@ -39,6 +41,6 @@
 		</li>
 	</ul>
 
-	<div class = "bottom">output</div>
+	<div class = "bottom">output [[received]]</div>
 
 </label>
