--- a/app/streams.html
+++ b/app/streams.html
@@ -41,6 +41,6 @@
 		</li>
 	</ul>
 
-	<div class = "bottom">output [[received]]</div>
+	<div class = "bottom">output ([[received]] messages)</div>
 
 </label>
